fixes project squishing

--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,7 @@ a:hover {
 }
 .project > a > img {
   width: 100%;
-  height: 22em;
+  max-height: 20em;
 }
 .technologies{
   list-style-type: square;
